src/tests/snapshots/gitu__tests__push__open_push_menu_after_dash_input.snap
---
source: src/tests/push.rs
expression: ctx.redact_buffer()
---
▌main                                                                           |
                                                                                |
 Recent commits                                                                 |
 e7eb2bd main add new-file                                                      |
 b66a0bf origin/main add initial-file                                           |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
 Push                             Arguments                                     |
 p     pushRemote, setting that   -n Dry run (--dry-run)                        |
 u     to origin/main             -F Force (--force)                            |
 e     to elsewhere               -f Force with lease (--force-with-lease)      |
 q/esc Quit/Close                 -h Disable hooks (--no-verify)                |
styles_hash: 43f64bfc15a55b53
