src/tests/snapshots/gitu__tests__push__push_elsewhere.snap
---
source: src/tests/push.rs
expression: ctx.redact_buffer()
---
▌main                                                                           |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main origin/main add initial-file                                      |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
$ git push origin                                                               |
Everything up-to-date                                                           |
styles_hash: 6b2cc6929b9ae58b
