src/tests/snapshots/gitu__tests__push__push_push_remote_prompt.snap
---
source: src/tests/push.rs
expression: ctx.redact_buffer()
---
▌main                                                                           |
                                                                                |
 Recent commits                                                                 |
 e7eb2bd main add new-file                                                      |
 b66a0bf origin/main add initial-file                                           |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
? Set pushRemote then push: › █                                                 |
styles_hash: e522368211e7d1f1
