src/tests/snapshots/gitu__tests__push__push_setup_upstream_same_as_head.snap
---
source: src/tests/push.rs
expression: ctx.redact_buffer()
---
▌new-branch                                                                     |
                                                                                |
 Recent commits                                                                 |
 e7eb2bd new-branch add new-file                                                |
 b66a0bf main origin/main add initial-file                                      |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
$ git branch --set-upstream-to new-branch                                       |
warning: not setting branch 'new-branch' as its own upstream                    |
styles_hash: 8218b450586decfb
