src/tests/snapshots/gitu__tests__push__push_upstream.snap
---
source: src/tests/push.rs
expression: ctx.redact_buffer()
---
▌main                                                                           |
                                                                                |
 Recent commits                                                                 |
 e7eb2bd main origin/main add new-file                                          |
 b66a0bf add initial-file                                                       |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
$ git push origin refs/heads/main:refs/heads/main                               |
To file://                                                                       
   b66a0bf..e7eb2bd  main -> main                                               |
styles_hash: 6b9b43557a63463a
